# vuepony

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  webpack.mix.js
vuepony/: asgi.py  settings.py  urls.py  views.py  wsgi.py
vuepony/fe/js/: app.js
vuepony/fe/js/components/: ChatComponent.vue  DemoComponent.vue
vuepony/templates/vuepony/: index.html
